--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "prune"
 version = "0.1.0"
-authors = ["Anton Österberg <anton.osterberg@gmail.com>"]
+authors = ["Anton Österberg <anton@42x.io>"]
 edition = "2018"
 
 [dependencies]
