--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/cache@v1
+      id: cache-cargo
+      with:
+        key: ${{ runnes.os }}-cargo-${{ hasFiles('Cargo.lock.toml') }}
+        path: target/release/deps
+        restore-keys: ${{ runner.os }}-cargo
+    - name: Fetch Dependencies
+      if: steaps.cache-cargo.outputs.cache-hit != 'true'
+      run: cargo fetch
     - name: Build
       run: cargo build --release --verbose
     - name: Run tests
