--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,11 +8,11 @@ jobs:
     - uses: actions/cache@v1
       id: cache-cargo
       with:
-        key: ${{ runnes.os }}-cargo-${{ hasFiles('Cargo.lock.toml') }}
+        key: ${{ runner.os }}-cargo-${{ hasFiles('Cargo.lock.toml') }}
         path: target/release/deps
         restore-keys: ${{ runner.os }}-cargo
     - name: Fetch Dependencies
-      if: steaps.cache-cargo.outputs.cache-hit != 'true'
+      if: steps.cache-cargo.outputs.cache-hit != 'true'
       run: cargo fetch
     - name: Build
       run: cargo build --release --verbose
