--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ jobs:
     - uses: actions/cache@v1
       id: cache-cargo
       with:
-        key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock.toml') }}
+        key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
         path: target/release/deps
         restore-keys: ${{ runner.os }}-cargo
     - name: Fetch Dependencies
