Github workflows: Build for multiple OS
Use build strategy with matrix. Build ant test for Max OS X, Windows and Linux.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,13 @@
-name: Rust
+name: Build & Test
 on: [push]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
+      max-parallel: 2
+      fail-fast: false
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1
