Limit path triggers for build and test workflow
Only run the "Build & Test" workflow when doing updates to source code,
test cases or Cargo files.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,5 +1,11 @@
 name: Build & Test
-on: [push]
+on:
+  push:
+    paths:
+      - '**/Cargo.toml'
+      - '**/Cargo.lock'
+      - 'src'
+      - 'tests'
 jobs:
   build:
     runs-on: ${{ matrix.os }}
