--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,9 +27,9 @@ jobs:
       if: steps.cache-cargo.outputs.cache-hit != 'true'
       run: cargo fetch
     - name: Build
-      run: cargo build --release --verbose
+      run: cargo build --release
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
 
   lint:
     runs-on: ubuntu-latest
