cargo build: Enable "--all-features"

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
       if: steps.cache-cargo.outputs.cache-hit != 'true'
       run: cargo fetch
     - name: Build
-      run: cargo build --release
+      run: cargo build --release --all-features
     - name: Run tests
       run: cargo test
 
