--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,9 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v1
+    - name: Change Project Name
+      if: runner.os == 'windows-latest'
+      run: get-content Cargo.toml | %{$_ -replace "prn","prune"}
     - uses: actions/cache@v1
       id: cache-cargo-fetch
       with:
