--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
       if: contains(runner.os, 'Windows')
       run: |
         get-content Cargo.toml | %{$_ -replace "prn","prune"} > windows.toml
-        mv windows.toml Cargo.toml
+        mv -f windows.toml Cargo.toml
     - uses: actions/cache@v1
       id: cache-cargo-fetch
       with:
