Use development profile in GitHub actions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,7 @@ jobs:
       if: steps.cache-cargo-fetch.outputs.cache-hit != 'true'
       run: cargo fetch
     - name: Build
-      run: cargo build --release --all-features
+      run: cargo build --all-features
     - name: Run tests
       run: cargo test
 
