Cache the entire content of directory "target"
Do not limit the cache to the content of a single build profile.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,7 +26,7 @@ jobs:
       id: cache-cargo-fetch
       with:
         key: ${{ runner.os }}-cargo-fetch-${{ hashFiles('Cargo.lock') }}
-        path: target/release
+        path: target
         restore-keys: ${{ runner.os }}-cargo-fetch
     - name: Fetch Dependencies
       if: steps.cache-cargo-fetch.outputs.cache-hit != 'true'
