--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ humansize = "1.1"
 regex = "1.3"
 log = "0.4"
 env_logger = "0.7"
-#fwalker = "0.2"
-fwalker = { path = "../fwalker" }
+fwalker = "0.3"
+#fwalker = { path = "../fwalker" }
