--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ regex = "1.3"
 log = "0.4"
 env_logger = "0.7"
 fwalker = "0.3"
+itertools = "0.9"
 
 [build-dependencies]
 built = { version = "0.4", features = ["git2"] }
