Fix caching issue on Mac OS (#23)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,14 +22,9 @@ jobs:
       run: |
         get-content Cargo.toml | %{$_ -replace "prn","prune"} > windows.toml
         mv -Force windows.toml Cargo.toml
-    - uses: actions/cache@v1
-      id: cache-cargo-fetch
-      with:
-        key: ${{ runner.os }}-cargo-fetch-${{ hashFiles('Cargo.lock') }}
-        path: target
-        restore-keys: ${{ runner.os }}-cargo-fetch
+    - name: Restore Cache
+      uses: Swatinem/rust-cache@v1
     - name: Fetch Dependencies
-      if: steps.cache-cargo-fetch.outputs.cache-hit != 'true'
       run: cargo fetch
     - name: Build
       run: cargo build --all-features
