--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ humansize = "1.1"
 regex = "1.3"
 log = "0.4"
 env_logger = "0.7"
-fwalker = "0.3"
+fwalker = "0.3.1"
+itertools = "0.9"
 
 [build-dependencies]
 built = { version = "0.4", features = ["git2"] }
