--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,20 @@ build = "build.rs"
 
 [dependencies]
 clap = "2.33"
+structopt = "0.3.21"
 humansize = "1.1"
 regex = "1.3"
+lazy_static = "1.4"
 log = "0.4"
 env_logger = "0.7"
-fwalker = "0.3.3"
+#fwalker = "0.3.4"
+fwalker = { path = "../fwalker" }
 itertools = "0.9"
+termcolor = "1.1"
 
 [build-dependencies]
 built = { version = "0.4", features = ["git2"] }
 
 [profile.release]
 lto = true
+debug = true
