--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ regex = "1.3"
 lazy_static = "1.4"
 log = "0.4"
 env_logger = "0.7"
-#fwalker = "0.3.4"
-fwalker = { path = "../fwalker" }
+fwalker = "0.4.0"
 itertools = "0.9"
 termcolor = "1.1"
 
