--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,18 @@
 name = "prn"
 version = "0.1.0"
 authors = ["Anton Österberg <anton@42x.io>"]
+description = "Command line tool for finding large files"
 edition = "2018"
 build = "build.rs"
 
 [dependencies]
-clap = "2.33"
+structopt = "0.3.21"
 humansize = "1.1"
 regex = "1.3"
+lazy_static = "1.4"
 log = "0.4"
 env_logger = "0.7"
-fwalker = "0.3.3"
+fwalker = "0.4.0"
 itertools = "0.9"
 
 [build-dependencies]
